static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Condensed:wght@300;400;700&display=swap');
/* -_-_-_-_-_-_-_-_-_-_ Headings _-_-_-_-_-_-_-_-_-_- */

h1, h2, h3, h4, h5{
    font-family: "Roboto Condensed", sans-serif;
}
p {
    font-family: "serrat", sans-serif;
}
.header-title{
    font-family: "Roboto Condensed", sans-serif;
}
a {
    font-family: "serrat", sans-serif;
}

/* -_-_-_-_-_-_-_-_-_-_ Sticky Footer  _-_-_-_-_-_-_-_-_-_- */
body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
  }

main {
    flex: 1 0 auto;
  }
/* -_-_-_-_-_-_-_-_-_-_ Title _-_-_-_-_-_-_-_-_-_- */
.header-title{
    font-size: 20px;
    padding-left: 10px;
}
.fa-car {
       font-size: 20px; 
       padding-left: 10px;
    }
@media(min-width: 992px){
    .header-title{
        font-size: 30px;
        padding-left: 10px;
    }
    .fa-car {
       font-size: 30px; 
       padding-left: 10px;
    }
}

  #mobile-demo {
    background-color: #004d40;
}

/* -_-_-_-_-_-_-_-_-_-_ Buttons _-_-_-_-_-_-_-_-_-_- */
.detailed_record_button{
    min-width: 80%;
    border-radius: 8px;
}
.edit_record_button{
    max-width: 40%;
    border-radius: 8px;
}
.tracker_button{
    border-radius: 8px;
    min-width: 60%;
    text-align: center;
    height: 30px;
    margin-top: 5px;
    margin-bottom: 5px;
}
@media(min-width: 992px){
    .tracker_button{
        height: 30px;
        margin-top: 5px;
        margin-bottom: 5px;
    }
}
/* -_-_-_-_-_-_-_-_-_-_ Footer _-_-_-_-_-_-_-_-_-_- */
.footer-copyright  {
    font-size: 10px;
}
.footer-copyright i {
    font-size: 18px;
    margin-right: 20px;
}
.footer-copyright i:hover{
    color: darkgrey;
}

@media(min-width: 992px){
    .footer-copyright  {
       font-size: 18px;
    }
    .footer-copyright i {
    font-size: 30px;
    margin-right: 50px;
    }
}
/* -_-_-_-_-_-_-_-_-_-_  Tracker Page Boxes _-_-_-_-_-_-_-_-_-_- */

.left_indent {
    padding-left: 20px;
}
.delete_icon:hover{
   font-size: 150%;
}
.records_list_tracker{
    margin-bottom:0px !important;
    margin-top:0px !important;
}
.tracker_info_row{
    margin-top: 8px;
}
/* -_-_-_-_-_-_-_-_-_-_  Add Record Page _-_-_-_-_-_-_-_-_-_- */
/* Remove arrows from number boxes
    /* Chrome, Safari, Edge, Opera */
    input::-webkit-outer-spin-button,
    input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
    }

    /* Firefox */
    input[type=number] {
    -moz-appearance: textfield;
    }

    .input-field{
        color: white;
    }
.item_button{
    font-size: 30px;
    padding-left: 30px;
}
/* -_-_-_-_-_-_-_-_-_-_  Add Record Page _-_-_-_-_-_-_-_-_-_- */
.profile_card ul li {
    padding-left: 20px;
}
.profile_card ul li strong{
    padding-left: 20px;
}
.profile_card ul li ul {
    padding-left: 100px;
}
.admin_help{
    text-decoration: underline;
}
.datepicker-day-button{
    color: black;
}
.invoice{
    font-size: 50%;
}
.admin_help:hover{
    text-decoration: none;
    font-size: 110%;
}
.act_deact_buttom{
    width: 80%;
    border: 1px solid black;
    border-radius: 5%;
    color: white;
}
/* -_-_-_-_-_-_-_-_-_-_ Manage Garages Page _-_-_-_-_-_-_-_-_-_- */

@media screen and (max-width: 600px) {
  .table {
    display: flex;  
    flex-wrap: nowrap;
    justify-content: center;
  }

  .table tr {
    display: flex;
    flex-direction: column;
  }

  .table td {
    white-space: nowrap;
  }
}

/* -_-_-_-_-_-_-_-_-_-_ Detailed Info Page _-_-_-_-_-_-_-_-_-_- */
.row{
    margin-bottom:10px !important;
    margin-right:1px !important
}
.detailed_info_card {
    margin-bottom:0px !important
}
.detailed_info_card p{
    padding-left: 30px;
}
.detailed_info_card h6{
    padding-left: 40px;
}
.detailed_info_card ol{
    padding-left: 70px;
}
@media(min-width: 500px){
    .detailed_info_card{
        min-height: 260px;
        padding-bottom: 10px !important;
    }
}

